--- a/src/variables/_colors.sass
+++ b/src/variables/_colors.sass
@@ -1,2 +1,3 @@
-$primary: rgb(200,100,100)
-$secondary: rgb(100, 20, 20)
+$background: rgb(178,34,34)
+$black: rgb(0, 0, 0)
+$white: rgb(255, 255, 255)
