--- a/src/variables/_fonts.sass
+++ b/src/variables/_fonts.sass
@@ -1,1 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou')
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap')
+
+$mainFont: 'Lobster', cursive
